# zanasonic

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
ci_cd/docker/: Dockerfile
ci_cd/python/: Dockerfile
console/: application.py
console/commands/: create_data_folder.py  extract.py  integrate.py  transform.py
notebooks/: 1.0_data_exploration.ipynb  1.0_transform.ipynb  1.1_data_preparation.ipynb  1.2_data_pipeline.ipynb  1.2_feature_selection-Copy1.ipynb  1.2_feature_selection.ipynb
services/zanasonic/: pyproject.toml
services/zanasonic-api/: pyproject.toml
services/zanasonic-api/tests/: test_zanasonic_api.py
services/zanasonic-data/: pyproject.toml
services/zanasonic-data/zanasonic_data/config/: config.yml  core.py
services/zanasonic-data/zanasonic_data/console/: application.py  extract.py  transform.py
services/zanasonic-data/zanasonic_data/extract/: extract_raw_data_kaggle.py
services/zanasonic-data/zanasonic_data/transform/: house_price_index.py  postcode.py  price_paid.py
services/zanasonic-etl/: pyproject.toml
services/zanasonic-etl/notebooks/: transform.ipynb
services/zanasonic-etl/zanasonic_etl/config/: config.yml  core.py
services/zanasonic-etl/zanasonic_etl/transform/: house_price_index.py  postcode.py  price_paid.py
services/zanasonic-ml/: pyproject.toml
services/zanasonic-ml/tests/: test_zanasonic_ml.py
shell_scripts/: subset.sh
tests/: conftest.py  create_train_test.py  test_extract.py  test_prediction.py
tests/create_test_data/: create_data.py  create_random_shuffle_price_paid.sh
tests/integration/: test_transform_hpi.py  test_transform_postcode.py  test_transform_price_paid.py
tests/sample_data/static/: hpi-processed-test.parquet  hpi-test.csv  postcode-processed-test.parquet  postcode-test.csv  pp-test.csv  price-paid-processed-test.parquet
tests/unit/: test_format_date.py  test_one.py  test_select_hpi_columns.py
utils/bash_scripts/: clean_images.sh  deploy_container.sh
zanasonic/: config.yml  pipeline.py  predict.py  train_pipeline.py
zanasonic/config/: core.py
zanasonic/console/: application.py
zanasonic/console/commands/: create_data_folder.py  extract.py  integrate.py  transform.py
zanasonic/data_management/config/: config.yml  core.py
zanasonic/data_management/datasets/: pricepaid.py  schema_validation.py
zanasonic/data_management/extract/: extract_raw_data.py
zanasonic/data_management/integrate/: integrate.py
zanasonic/data_management/transform/: house_price_index.py  postcode.py  price_paid.py
zanasonic/machine_learning/: check_postcode.py
zanasonic/processing/: data_manager.py  extract.py  extract_functions.py  transform.py  transform_functions.py  validation.py
zanasonic/zdata/config/: config.yml  core.py  create_data_folder.py
zanasonic/zdata/extract/: extract_raw_data_kaggle.py
zanasonic/zdata/integrate/: integrate.py
zanasonic/zdata/transform/: house_price_index.py  postcode.py  price_paid.py
zanasonic/zml/: check_postcode.py
