[tool.poetry]
name = "zanasonic"
version = "0.1.0"
description = ""
authors = ["zanalytics <chrispen@zanalytics.io>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pandas = "1.3.0"
scikit-learn = "0.24.2"
requests = "2.25.1"
feature-engine = "1.1.0"
strictyaml = "1.4.4"
PyYAML = "5.4.1"
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
